--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <script src="scripts/vendor/modernizr.min.js"></script>
     </head>
     <body>
+        <a href="https://github.com/JoePettersson/gutenberg"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <h1>Gutenberg ECMAScript 5 mini-templating</h1>
             <h2>Below are various HTML elements created on document.ready by Gutenberg</h2>
